--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<div class="stoplight">
+    <img src="images/green.png" alt="" width="200px" height="200px">
+    <img src="images/red.png" alt="" width="200px" height="200px">
+</div>
